# summer2021-79

./: Cargo.toml  README.en.md  README.md  medium_term_report.md  rust-code-analysis-report.md
src/: lib.rs  main.rs  utils.rs
src/metrics/: cyclomatic_complexity.rs  loc.rs  mod.rs
src/tools/: cc_stats.rs  file_duplicate.rs  large_dir.rs  loc_file_stats.rs  loc_func_stats.rs  mod.rs
